--- a/Лабораторна робота 3/sources/index.html
+++ b/Лабораторна робота 3/sources/index.html
@@ -1,1 +1,80 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Джоні Депп</title>
+	<link rel="stylesheet" href="style.css">
+	<script src="script.js"></script>
+</head>
+<body>
+	<header>
+		<div class="contents">
+		  <a href="audio.html">Музика</a>
+		  <a href="video.html">Відео</a>
+		  <a href="marks.html">Таблиця</a>
+		</div>
+		<br />
+		<button type="button" id="but" onclick="changeBackground();">Green background</button>
+		<br />
+		<h1 align="center">Джоні Депп</h1>
+		<h3>Короткі відомості: </h3>
+	</header>
 
+	<pre>
+<strong>Джон Крістофер Депп</strong> — американський актор, продюсер, режисер, сценарист, музикант. В <time datatime="2015">2015 році</time>разом із Елісом Купером та Джої Перрі Джонні Депп утворив
+музичний супергурт під назвою <em>Hollywood Vampires</em>. Дебютний альбом гурту вийшов <time datatime="2015-09-11">11 вересня 2015 року</time>. 
+	</pre>
+	<img align="right" src="resources/depp.jpg" height="250" hspace="100" title="Актор Джоні Депп" alt="Актор Джоні Депп"/>
+	<ul>
+		<li><strong>Дата народження:</strong><time datatime="1963-06-09">09.06.1963</time></li>
+		<li><strong>Місце народження:</strong> Оуенсборо, Кентукі</li>
+		<li><strong>Громадянство:</strong> США</li>
+		<li><strong>Релігія:</strong> атеїзм</li>
+		<li>
+			<strong>Автограф:</strong>
+			<pre>
+<img src="resources/autogr.png" height="100" width="100" title="Підпис актора" alt="Підпис актора" />
+			</pre>
+		</li>
+	</ul>
+
+	<header>
+		<h3>Біографія: </h3>
+	</header>
+
+	<p>Народився <time datatime="1963-06-09">9 червня 1963 року</time> в невеликому американському містечку Овенсборо. Його батько, Джон Крістофер Депп Старший, працював інженером-будівельником, а його мати, Бетті Сью Палмер — офіціанткою. У нього дві сестри — Деббі і Крісті, і брат Деніел. Коли Джонні виповнилося 7 років, його родина переїхала до Флориди, де його батько зайняв кращу посаду в приморському місті. Дитинство провів з дідусем, тому важко пережив його смерть. На дитячу психіку негативний відбиток наклала постійна зміна осель, переїзди.</p>
+
+	<p>	Та на щастя, підліток знайшов собі захоплення — музику. Мати подарувала йому електрогітару, і з 12 років Депп почав грати в групі в гаражі. Перший гурт було названо в честь подруги Джонні — <em>Мередіт</em>. Через рік після розлучення батьків Джонні кинув школу, щоб стати рок-музикантом. Отримав перші гонорари на виступах у місцевих барах і клубах. Однак справи у гурту йшли не найкращим чином, тому він припинив своє існування ще до того, як став популярним. Потім був гурт <em>«The Kids»</em>, <em>«Дітки»</em>, який був досить локально успішним; <em>«Дітки»</em> переїхали в Лос-Анджелес, змінили назву на <em>«Six Gun Method»</em> і розпались.</p>
+
+	<p>Депп згодом співпрацював з групою Rock City Angels і був співавтором їх пісні <em>«Марія»</em>, яка з'явилася на Rock City Angels — дебют Geffen Records під назвою <em>Блюз молодої людини/Young Man's Blues</em>. Приблизно в цей час Джонні одружився із Лорі Еллісон (шлюб проіснував близько двох років), що познайомила його із Ніколасом Кейджем. Джонні одержав першу невелику роль у фільмі <em>«Кошмар на вулиці В'язів»</em>. Перші гонорари Депп витрачав на уроки акторської майстерності. Незабаром Депп знявся у серіалі <em>«21 Jump Street»</em>. Серіал став хітом, а Депп — улюбленцем публіки.</p>
+
+
+	<header>
+		<h3>Цікаві факти: </h3>
+	</header>
+	<ul>
+		<li>
+			За роль Джека Горобця в четвертій частині <em>«Пірати Карибського моря»</em> Джонні Депп отримав 55,6 мільйона доларів — це рекордний гонорар в історії Голівуду.
+		</li>
+		<li>
+			За словами самого актора — він не дивиться фільмів зі своєю участю, кажучи так: «Краще я проковтну мішок кліщів, аніж буду робити це». Про вірогідність ідеї переглянути власний фільм у майбутньому актор каже: «Імовірно, мені знадобиться не одна пляшка вина, аби я зміг зробити це».
+		</li>
+		<li>
+			Джонні Депп погано бачить лівим оком і короткозорий на праве.
+		</li>
+	</ul>
+
+	<footter>
+		<br />
+		<br />
+		<small>
+			Сторінку створено Лобуньком Д.О.,<br />
+			ст. гр. БС-81, ФБМІ, КПІ<br />
+			Номер телефону: +380957257716<br />
+			Почтова адреса: dimalobunko@ukr.net<br />
+		</small>
+		<a href="https://github.com/dim2bit"><img src="resources/github.png" height="50" /></a>
+		<a href="https://www.youtube.com/channel/UCpUZHkpr9iaWg2c1yupk7dA?view_as=subscriber"><img src="resources/youtube.png" height="48" width="50" /></a>
+	</footter>
+</body>
+</html>
