--- a/Лабораторна робота 3/sources/audio.html
+++ b/Лабораторна робота 3/sources/audio.html
@@ -12,6 +12,6 @@
   <br />
   <strong>Marilyn Manson- You're So Vain ft. Johnny Depp</strong>
   <br />
-  <audio src="audios/jdeppAU.mp3" type="audio/mp3" controls></audio>
+  <audio src="resources/jdeppAU.mp3" type="audio/mp3" controls></audio>
 </body>
 </html>
