--- a/Лабораторна робота 3/sources/video.html
+++ b/Лабораторна робота 3/sources/video.html
@@ -10,6 +10,6 @@
   	<a href="index.html">←Повернутися назад</a>
   </div>	
   <br />
-  <video src="videos/jdeppVID.mp4" type="video/mp4" controls></video>
+  <video src="resources/jdeppVID.mp4" type="video/mp4" controls></video>
 </body>
 </html>
