--- a/Лабораторна робота 7/sources/index.html
+++ b/Лабораторна робота 7/sources/index.html
@@ -12,29 +12,46 @@
       <img src="resources/Crios.png" style="width: 20vw;">
     </div>
   </header>
+  <div class="pics">
+    <div class="box">
+        <img src="resources/template.png" style="width: 100vw;">
+        <div class="title_text">
+          Simple PSD template with cool stuff
+          <div class="title_text_under">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </div>
+        </div>
+        <div class="under_title_text">
+          Lorem ipsum dolor sit amet
+          <div class="text_upper">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </div>
+        </div>
+    </div>
+  </div>
   <div class="buttons">
     <div class="button">
       <a href="#box_1">
         <img src="resources/but_1.png">
-        <div class="button_text">Розділ №1</div>
+        <div class="button_text">Lorem ipsum dolor sit amet</div>
       </a>
     </div>
     <div class="button">
       <a href="#box_2">
         <img src="resources/but_2.png">
-        <div class="button_text">Розділ №2</div>
+        <div class="button_text">Lorem ipsum dolor sit amet</div>
       </a>
     </div>
     <div class="button">
       <a href="#screen_app">
         <img src="resources/but_3.png">
-        <div class="button_text">Розділ №3</div>
+        <div class="button_text">Lorem ipsum dolor sit amet</div>
       </a>
     </div>
     <div class="button">
       <a href="#John_Doe">
         <img src="resources/but_4.png">
-        <div class="button_text">Розділ №4</div>
+        <div class="button_text">Lorem ipsum dolor sit amet</div>
       </a>
     </div>
   </div>
@@ -43,26 +60,54 @@
       <a name="box_1">
         <img src="resources/box_1.png" style="width: 100vw;">
       </a>
-      <div class="box_1_text">Розділ №1</div>
+      <div class="box_1_text">
+        Lorem ipsum dolor
+        <div class="text_under">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Suspendise vel leoefficitur, venenantis est ut, tincidunt nibh.
+          Suspendisse lobortis lectus vel imperdiet ullacorper.
+        </div>
+      </div>
     </div>
     <div class="box">
       <a name="box_2">
         <img src="resources/box_2.png" style="width: 100vw;">
       </a>
-      <div class="box_2_text">Розділ №2</div>
+      <div class="box_2_text">
+        Lorem ipsum dolor
+        <div class="text_under">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Suspendise vel leoefficitur, venenantis est ut, tincidunt nibh.
+          Suspendisse lobortis lectus vel imperdiet ullacorper.
+        </div>
+      </div>
     </div>
     <div class="box">
       <a name="screen_app">
         <img src="resources/screen_app_1.png" style="width: 49vw;">
       </a>
       <img src="resources/screen_app_2.png" style="width: 49vw;">
-      <div class="screen_app_text">Розділ №3</div>
+      <div class="screen_app_text" style="color: rgb(0, 140, 255);">
+        Lorem ipsum dolor
+        <div class="text_under">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Suspendise vel leoefficitur, venenantis est ut, tincidunt nibh.
+          Suspendisse lobortis lectus vel imperdiet ullacorper.
+        </div>
+      </div>
     </div>
     <div class="box">
       <a name="John_Doe">
         <img src="resources/John_Doe.png" style="width: 100vw;">
       </a>
-      <div class="box_1_text">Розділ №4</div>
+      <div class="box_1_text" style="color: brown;">
+        Template is awesome
+        <div class="text_under">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Suspendise vel leoefficitur, venenantis est ut, tincidunt nibh.
+          Suspendisse lobortis lectus vel imperdiet ullacorper.
+        </div>
+      </div>
     </div>
   </div>
   <header style="margin: 1vw;"><h3>Форма</h3></header>
@@ -95,8 +140,14 @@
     }
   </script>
   <footer autocomplete="off">
-    <div class="pics">
+    <div class="box">
       <img src="resources/Footer.png" style="width: 100vw;">
+      <div class="title_text">
+        Lorem ipsum dolor sit amet
+        <div class="text_upper">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </div>
+      </div>
     </div>
   </footer>
 </body>
