--- a/Лабораторна робота 7/sources/index.html
+++ b/Лабораторна робота 7/sources/index.html
@@ -33,25 +33,45 @@
     <div class="button">
       <a href="#box_1">
         <img src="resources/but_1.png">
-        <div class="button_text">Lorem ipsum dolor sit amet</div>
+        <div class="button_text">
+          Lorem ipsum dolor sit amet
+          <div class="text_under_button">
+            Suspendise vel leoefficitur, venenantis est ut, tincidunt nibh.
+          </div>
+        </div>
       </a>
     </div>
     <div class="button">
       <a href="#box_2">
         <img src="resources/but_2.png">
-        <div class="button_text">Lorem ipsum dolor sit amet</div>
+        <div class="button_text">
+          Lorem ipsum dolor sit amet
+          <div class="text_under_button">
+            Suspendise vel leoefficitur, venenantis est ut, tincidunt nibh.
+          </div>
+        </div>
       </a>
     </div>
     <div class="button">
       <a href="#screen_app">
         <img src="resources/but_3.png">
-        <div class="button_text">Lorem ipsum dolor sit amet</div>
+        <div class="button_text">
+          Lorem ipsum dolor sit amet
+          <div class="text_under_button">
+            Suspendise vel leoefficitur, venenantis est ut, tincidunt nibh.
+          </div>
+        </div>
       </a>
     </div>
     <div class="button">
       <a href="#John_Doe">
         <img src="resources/but_4.png">
-        <div class="button_text">Lorem ipsum dolor sit amet</div>
+        <div class="button_text">
+          Lorem ipsum dolor sit amet
+          <div class="text_under_button">
+            Suspendise vel leoefficitur, venenantis est ut, tincidunt nibh.
+          </div>
+        </div>
       </a>
     </div>
   </div>
